--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,8 +1,22 @@
-FROM httpd:2.4
-# prevent error message
-#  AH00558: apache2: Could not reliably determine
-#  the server's fully qualified domain name"
-# by setting server name to be localhost
-RUN echo "ServerName localhost" >> /usr/local/apache2/conf/httpd.conf
-COPY index.html /usr/local/apache2/htdocs/
-EXPOSE 80
+FROM node:15 as build
+
+WORKDIR /app
+
+COPY package.json ./
+
+RUN yarn
+
+COPY . ./
+
+RUN yarn build
+
+FROM nginx:1.19-alpine
+
+COPY --from=build /app/build /usr/share/nginx/html/plop
+
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf /etc/nginx/conf.d
+
+EXPOSE 7777
+
+CMD ["nginx", "-g", "daemon off;"]
